--- a/_teaching/2021-ia717.md
+++ b/_teaching/2021-ia717.md
@@ -1,5 +1,5 @@
 ---
-title: "IA717"
+title: "IA717 - Natural Language Processing"
 collection: teaching
 type: "Graduate course"
 permalink: /teaching/2022-ia717
